manifest/service.yml
apiVersion: v1
kind: Service
metadata:
   labels:
      app: blackbox-exporter
   name: blackbox-exporter
   namespace: default
spec:
 ports:
   - name: http
     port: 9115
     protocol: TCP
 selector:
   app: blackbox-exporter
 type: ClusterIP
