manifest/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
     kubernetes.io/ingress.class: nginx
  labels:
     app: blackbox-exporter
  name: blackbox-exporter
  namespace: devi
spec:
  rules:
    - host: blackbox-exporter.example.com
      http:
        paths:
          - backend:
              serviceName: blackbox-exporter
              servicePort: 9115
            path: /
